tests/ui-toml/toml_unknown_key/conf_unknown_key.stderr
error: error reading Clippy's configuration file: unknown field `foobar`, expected one of
           absolute-paths-allowed-crates
           absolute-paths-max-segments
           accept-comment-above-attributes
           accept-comment-above-statement
           allow-comparison-to-zero
           allow-dbg-in-tests
           allow-expect-in-tests
           allow-mixed-uninlined-format-args
           allow-one-hash-in-raw-strings
           allow-print-in-tests
           allow-private-module-inception
           allow-unwrap-in-tests
           allowed-dotfiles
           allowed-duplicate-crates
           allowed-idents-below-min-chars
           allowed-scripts
           allowed-wildcard-imports
           arithmetic-side-effects-allowed
           arithmetic-side-effects-allowed-binary
           arithmetic-side-effects-allowed-unary
           array-size-threshold
           avoid-breaking-exported-api
           await-holding-invalid-types
           blacklisted-names
           cargo-ignore-publish
           check-private-items
           cognitive-complexity-threshold
           cyclomatic-complexity-threshold
           disallowed-macros
           disallowed-methods
           disallowed-names
           disallowed-types
           doc-valid-idents
           enable-raw-pointer-heuristic-for-send
           enforce-iter-loop-reborrow
           enforced-import-renames
           enum-variant-name-threshold
           enum-variant-size-threshold
           excessive-nesting-threshold
           future-size-threshold
           ignore-interior-mutability
           large-error-threshold
           literal-representation-threshold
           matches-for-let-else
           max-fn-params-bools
           max-include-file-size
           max-struct-bools
           max-suggested-slice-pattern-length
           max-trait-bounds
           min-ident-chars-threshold
           missing-docs-in-crate-items
           msrv
           pass-by-value-size-limit
           pub-underscore-fields-behavior
           semicolon-inside-block-ignore-singleline
           semicolon-outside-block-ignore-multiline
           single-char-binding-names-threshold
           stack-size-threshold
           standard-macro-braces
           struct-field-name-threshold
           suppress-restriction-lint-in-const
           third-party
           too-large-for-stack
           too-many-arguments-threshold
           too-many-lines-threshold
           trivial-copy-size-limit
           type-complexity-threshold
           unnecessary-box-size
           unreadable-literal-lint-fractions
           upper-case-acronyms-aggressive
           vec-box-size-threshold
           verbose-bit-mask-threshold
           warn-on-all-wildcard-imports
  --> $DIR/$DIR/clippy.toml:2:1
   |
LL | foobar = 42
   | ^^^^^^

error: error reading Clippy's configuration file: unknown field `barfoo`, expected one of
           absolute-paths-allowed-crates
           absolute-paths-max-segments
           accept-comment-above-attributes
           accept-comment-above-statement
           allow-comparison-to-zero
           allow-dbg-in-tests
           allow-expect-in-tests
           allow-mixed-uninlined-format-args
           allow-one-hash-in-raw-strings
           allow-print-in-tests
           allow-private-module-inception
           allow-unwrap-in-tests
           allowed-dotfiles
           allowed-duplicate-crates
           allowed-idents-below-min-chars
           allowed-scripts
           allowed-wildcard-imports
           arithmetic-side-effects-allowed
           arithmetic-side-effects-allowed-binary
           arithmetic-side-effects-allowed-unary
           array-size-threshold
           avoid-breaking-exported-api
           await-holding-invalid-types
           blacklisted-names
           cargo-ignore-publish
           check-private-items
           cognitive-complexity-threshold
           cyclomatic-complexity-threshold
           disallowed-macros
           disallowed-methods
           disallowed-names
           disallowed-types
           doc-valid-idents
           enable-raw-pointer-heuristic-for-send
           enforce-iter-loop-reborrow
           enforced-import-renames
           enum-variant-name-threshold
           enum-variant-size-threshold
           excessive-nesting-threshold
           future-size-threshold
           ignore-interior-mutability
           large-error-threshold
           literal-representation-threshold
           matches-for-let-else
           max-fn-params-bools
           max-include-file-size
           max-struct-bools
           max-suggested-slice-pattern-length
           max-trait-bounds
           min-ident-chars-threshold
           missing-docs-in-crate-items
           msrv
           pass-by-value-size-limit
           pub-underscore-fields-behavior
           semicolon-inside-block-ignore-singleline
           semicolon-outside-block-ignore-multiline
           single-char-binding-names-threshold
           stack-size-threshold
           standard-macro-braces
           struct-field-name-threshold
           suppress-restriction-lint-in-const
           third-party
           too-large-for-stack
           too-many-arguments-threshold
           too-many-lines-threshold
           trivial-copy-size-limit
           type-complexity-threshold
           unnecessary-box-size
           unreadable-literal-lint-fractions
           upper-case-acronyms-aggressive
           vec-box-size-threshold
           verbose-bit-mask-threshold
           warn-on-all-wildcard-imports
  --> $DIR/$DIR/clippy.toml:4:1
   |
LL | barfoo = 53
   | ^^^^^^

error: error reading Clippy's configuration file: unknown field `allow_mixed_uninlined_format_args`, expected one of
           absolute-paths-allowed-crates
           absolute-paths-max-segments
           accept-comment-above-attributes
           accept-comment-above-statement
           allow-comparison-to-zero
           allow-dbg-in-tests
           allow-expect-in-tests
           allow-mixed-uninlined-format-args
           allow-one-hash-in-raw-strings
           allow-print-in-tests
           allow-private-module-inception
           allow-unwrap-in-tests
           allowed-dotfiles
           allowed-duplicate-crates
           allowed-idents-below-min-chars
           allowed-scripts
           allowed-wildcard-imports
           arithmetic-side-effects-allowed
           arithmetic-side-effects-allowed-binary
           arithmetic-side-effects-allowed-unary
           array-size-threshold
           avoid-breaking-exported-api
           await-holding-invalid-types
           blacklisted-names
           cargo-ignore-publish
           check-private-items
           cognitive-complexity-threshold
           cyclomatic-complexity-threshold
           disallowed-macros
           disallowed-methods
           disallowed-names
           disallowed-types
           doc-valid-idents
           enable-raw-pointer-heuristic-for-send
           enforce-iter-loop-reborrow
           enforced-import-renames
           enum-variant-name-threshold
           enum-variant-size-threshold
           excessive-nesting-threshold
           future-size-threshold
           ignore-interior-mutability
           large-error-threshold
           literal-representation-threshold
           matches-for-let-else
           max-fn-params-bools
           max-include-file-size
           max-struct-bools
           max-suggested-slice-pattern-length
           max-trait-bounds
           min-ident-chars-threshold
           missing-docs-in-crate-items
           msrv
           pass-by-value-size-limit
           pub-underscore-fields-behavior
           semicolon-inside-block-ignore-singleline
           semicolon-outside-block-ignore-multiline
           single-char-binding-names-threshold
           stack-size-threshold
           standard-macro-braces
           struct-field-name-threshold
           suppress-restriction-lint-in-const
           third-party
           too-large-for-stack
           too-many-arguments-threshold
           too-many-lines-threshold
           trivial-copy-size-limit
           type-complexity-threshold
           unnecessary-box-size
           unreadable-literal-lint-fractions
           upper-case-acronyms-aggressive
           vec-box-size-threshold
           verbose-bit-mask-threshold
           warn-on-all-wildcard-imports
  --> $DIR/$DIR/clippy.toml:7:1
   |
LL | allow_mixed_uninlined_format_args = true
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: perhaps you meant: `allow-mixed-uninlined-format-args`

error: aborting due to 3 previous errors

